tests/baselines/reference/numericIndexerTyping1.errors.txt
==== tests/cases/compiler/numericIndexerTyping1.ts (2 errors) ====
    interface I {
        [x: string]: Date;
    }
    
    interface I2 extends I {
    }
    
    var i: I;
    var r: string = i[1]; // error: numeric indexer returns the type of the string indexer
        ~~~~~~~~~~~~~~~~
!!! numericIndexerTyping1.ts(9,5): error TS2011: Cannot convert 'Date' to 'string'.
    
    var i2: I2;
    var r2: string = i2[1]; // error: numeric indexer returns the type of the string indexer
        ~~~~~~~~~~~~~~~~~~
!!! numericIndexerTyping1.ts(12,5): error TS2011: Cannot convert 'Date' to 'string'.